fix overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
-
+#root {
+  overflow-x: hidden;
+}
 * {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
